--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,111 +1,125 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@color/colorBlack"
     xmlns:app="http://schemas.android.com/apk/res-auto">
 
-    <ImageView
-        android:id="@+id/logo"
-        android:layout_width="130pt"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="0dp"
-        android:src="@drawable/img_logo_green_flag"
-        app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        android:layout_centerHorizontal="true"/>
+    <androidx.constraintlayout.widget.ConstraintLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content">
 
-    <TextView
-        android:id="@+id/description"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_centerHorizontal="true"
-        android:width="260dp"
-        android:fontFamily="@font/advent_pro"
-        android:text="@string/description"
-        android:textSize="@dimen/ft_description"
-        android:textColor="@color/colorWhite"
-        android:layout_below="@id/logo"
-        android:layout_marginTop="50dp"/>
+        <ImageView
+            android:id="@+id/logo"
+            android:contentDescription="@null"
+            android:layout_width="130pt"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="40dp"
+            android:src="@drawable/img_logo_green_flag"
+            app:layout_constraintLeft_toLeftOf="parent"
+            app:layout_constraintRight_toRightOf="parent"
+            app:layout_constraintTop_toTopOf="parent" />
 
-    <ImageView
-        android:id="@+id/check_1"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_alignStart="@id/description"
-        android:src="@drawable/ic_check_lime_16dp"
-        android:layout_below="@id/description"
-        android:layout_marginTop="15dp"
-        android:layout_alignBottom="@id/opt_1"/>
+        <TextView
+            android:id="@+id/description"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="50dp"
+            android:width="260dp"
+            android:fontFamily="@font/advent_pro"
+            android:text="@string/description"
+            android:textSize="@dimen/ft_description"
+            android:textColor="@color/colorWhite"
+            app:layout_constraintTop_toBottomOf="@id/logo"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintEnd_toEndOf="parent" />
 
-    <TextView
-        android:id="@+id/opt_1"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_below="@id/description"
-        android:layout_marginStart="@dimen/opt_margin_start"
-        android:layout_marginTop="15dp"
-        android:layout_toEndOf="@id/check_1"
-        android:fontFamily="@font/advent_pro"
-        android:text="@string/opt_1"
-        android:textSize="@dimen/opt_text_size"
-        android:textColor="@color/colorWhite"/>
+        <ImageView
+            android:id="@+id/check_1"
+            android:contentDescription="@null"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:src="@drawable/ic_check_lime_16dp"
+            app:layout_constraintStart_toStartOf="@id/description"
+            app:layout_constraintTop_toTopOf="@id/opt_1"
+            app:layout_constraintBottom_toBottomOf="@id/opt_1" />
 
-    <ImageView
-        android:id="@+id/check_2"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_alignStart="@id/description"
-        android:src="@drawable/ic_check_lime_16dp"
-        android:layout_below="@id/check_1"
-        android:layout_alignBottom="@id/opt_2"/>
+        <TextView
+            android:id="@+id/opt_1"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginStart="@dimen/opt_margin_start"
+            android:layout_marginTop="15dp"
+            android:fontFamily="@font/advent_pro"
+            android:text="@string/opt_1"
+            android:textSize="@dimen/opt_text_size"
+            android:textColor="@color/colorWhite"
+            app:layout_constraintTop_toBottomOf="@id/description"
+            app:layout_constraintStart_toEndOf="@id/check_1"/>
 
-    <TextView
-        android:id="@+id/opt_2"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_below="@id/opt_1"
-        android:layout_marginStart="@dimen/opt_margin_start"
-        android:layout_toEndOf="@id/check_2"
-        android:fontFamily="@font/advent_pro"
-        android:text="@string/opt_2"
-        android:textSize="@dimen/opt_text_size"
-        android:textColor="@color/colorWhite" />
+        <ImageView
+            android:id="@+id/check_2"
+            android:contentDescription="@null"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_alignStart="@id/description"
+            android:src="@drawable/ic_check_lime_16dp"
+            app:layout_constraintStart_toStartOf="@id/description"
+            app:layout_constraintTop_toTopOf="@id/opt_2"
+            app:layout_constraintBottom_toBottomOf="@id/opt_2"/>
 
-    <ImageView
-        android:id="@+id/check_3"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_alignStart="@id/description"
-        android:src="@drawable/ic_check_lime_16dp"
-        android:layout_below="@id/check_2"
-        android:layout_alignBottom="@id/opt_3"/>
+        <TextView
+            android:id="@+id/opt_2"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginStart="@dimen/opt_margin_start"
+            android:layout_marginTop="5dp"
+            android:fontFamily="@font/advent_pro"
+            android:text="@string/opt_2"
+            android:textSize="@dimen/opt_text_size"
+            android:textColor="@color/colorWhite"
+            app:layout_constraintStart_toEndOf="@id/check_2"
+            app:layout_constraintTop_toBottomOf="@id/opt_1"/>
 
-    <TextView
-        android:id="@+id/opt_3"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_below="@id/opt_2"
-        android:layout_marginStart="@dimen/opt_margin_start"
-        android:layout_toEndOf="@id/check_2"
-        android:textSize="@dimen/opt_text_size"
-        android:fontFamily="@font/advent_pro"
-        android:text="@string/opt_3"
-        android:textColor="@color/colorWhite"/>
+        <ImageView
+            android:id="@+id/check_3"
+            android:contentDescription="@null"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:src="@drawable/ic_check_lime_16dp"
+            app:layout_constraintStart_toStartOf="@id/description"
+            app:layout_constraintTop_toTopOf="@id/opt_3"
+            app:layout_constraintBottom_toBottomOf="@id/opt_3"/>
 
-    <Button
-        android:id="@+id/btn_create_acct"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_centerHorizontal="true"
-        android:layout_alignParentBottom="true"
-        android:layout_marginBottom="50dp"
-        android:paddingStart="50dp"
-        android:paddingEnd="50dp"
-        android:text="@string/create_an_account"
-        android:background="@color/colorLime"
-        android:textAllCaps="false"/>
+        <TextView
+            android:id="@+id/opt_3"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginStart="@dimen/opt_margin_start"
+            android:layout_marginTop="5dp"
+            android:textSize="@dimen/opt_text_size"
+            android:fontFamily="@font/advent_pro"
+            android:text="@string/opt_3"
+            android:textColor="@color/colorWhite"
+            app:layout_constraintStart_toEndOf="@id/check_3"
+            app:layout_constraintTop_toBottomOf="@id/opt_2"/>
 
+        <Button
+            android:id="@+id/btn_create_acct"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginBottom="50dp"
+            android:layout_marginTop="100dp"
+            android:paddingStart="50dp"
+            android:paddingEnd="50dp"
+            android:text="@string/create_an_account"
+            android:background="@color/colorLime"
+            android:textAllCaps="false"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintTop_toBottomOf="@id/opt_3"
+            app:layout_constraintBottom_toBottomOf="parent"/>
+    </androidx.constraintlayout.widget.ConstraintLayout>
 
-</RelativeLayout>
+</ScrollView>
