added login functionality

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,6 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
 <ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@color/colorBlack"
@@ -106,19 +105,34 @@
             app:layout_constraintTop_toBottomOf="@id/opt_2"/>
 
         <Button
-            android:id="@+id/btn_create_acct"
-            android:layout_width="wrap_content"
+            android:id="@+id/btn_sign_in"
+            android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_marginBottom="50dp"
-            android:layout_marginTop="100dp"
-            android:paddingStart="50dp"
-            android:paddingEnd="50dp"
+            android:layout_marginTop="50dp"
+            android:layout_marginStart="75dp"
+            android:layout_marginEnd="75dp"
+            android:text="@string/log_in_text"
+            android:background="@color/colorLime"
+            android:textAllCaps="false"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintTop_toBottomOf="@id/opt_3" />
+
+        <Button
+            android:id="@+id/btn_create_acct"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:layout_marginBottom="50dp"
+            android:layout_marginTop="20dp"
+            android:layout_marginStart="75dp"
+            android:layout_marginEnd="75dp"
             android:text="@string/create_an_account"
             android:background="@color/colorLime"
             android:textAllCaps="false"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintTop_toBottomOf="@id/opt_3"
+            app:layout_constraintTop_toBottomOf="@id/btn_sign_in"
             app:layout_constraintBottom_toBottomOf="parent"/>
     </androidx.constraintlayout.widget.ConstraintLayout>
 
